# packet-pilot

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Developer_Implementation_guide.md  LICENSE  PROJECT.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
docs/: LAUNCH_HN.md  STRATEGY.md  agent-templates.md
e2e/: playwright.config.ts
electron/: main.cts  preload.cts
landing/: index.html
scripts/: bundle-sharkd.ps1  bundle-sharkd.sh  dev-electron.mjs  public-pcap-corpus.cjs  run-ai-harness-live.cjs  run-electron-smoke.cjs  run-tests.cjs  verify-sharkd.cjs
shared/: electron-api.ts  openrouter-models.ts
sidecar/: build.ps1  build.sh  packet-pilot-ai.spec  pyproject.toml
sidecar/src/packet_pilot_ai/: __init__.py  __main__.py  server.py
sidecar/src/packet_pilot_ai/models/: __init__.py  schemas.py
sidecar/src/packet_pilot_ai/routes/: __init__.py  analyze.py  filter.py
sidecar/src/packet_pilot_ai/services/: __init__.py  ai_agent.py  ai_tool_handlers.py  ai_tools.py  anthropic_client.py  chatgpt_client.py  provider.py  rust_bridge.py
sidecar/tests/: README.md  __init__.py  conftest.py
sidecar/tests/fixtures/: __init__.py  mock_responses.py  sample_data.py
sidecar/tests/integration/: __init__.py  test_analyze_flow.py
sidecar/tests/prompts/: __init__.py  test_scenarios.py
sidecar/tests/prompts/scenarios/: response_quality.yaml  tool_selection.yaml
sidecar/tests/unit/: __init__.py  test_tool_execution.py
src/: App.css  (+2 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
(+90 files in other folders)
